...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="flr-SL-wZf">
                                        <rect key="frame" x="0.0" y="0.0" width="247" height="30"/>
                                        <state key="normal" title="Push View Controller"/>
                                        <connections>
                                            <action selector="tappedButton:" destination="DLx-p2-uAg" eventType="touchUpInside" id="d1U-u5-JCH"/>
...
                        <viewLayoutGuide key="safeArea" id="Kv0-pF-28O"/>
                    </view>
                    <navigationItem key="navigationItem" title="Tab 2" id="Aet-vS-JoO"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="pny-6j-6ny" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xk9-XE-ajE">
                                        <rect key="frame" x="0.0" y="0.0" width="247" height="30"/>
                                        <state key="normal" title="Reset Stack"/>
                                        <connections>
                                            <action selector="tappedButton:" destination="rob-ql-gLc" eventType="touchUpInside" id="0rX-TQ-Au7"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9WI-TU-5Kr">
                                        <rect key="frame" x="0.0" y="90" width="247" height="30"/>
                                        <state key="normal" title="Open Universal Link"/>
                                        <connections>
                                            <action selector="tappedButton4:" destination="qXn-jW-ju6" eventType="touchUpInside" id="rwG-Ic-kYI"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nTV-gV-xv7">
                                        <rect key="frame" x="0.0" y="120" width="247" height="30"/>
                                        <state key="normal" title="Attempt Broken Universal Link"/>
                                        <connections>
                                            <action selector="tappedButton5:" destination="qXn-jW-ju6" eventType="touchUpInside" id="srJ-kY-pIl"/>
...
                        <viewLayoutGuide key="safeArea" id="mFw-7a-13X"/>
                    </view>
                    <navigationItem key="navigationItem" title="Tab 1" id="yJ6-vA-B7A"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="cqO-AM-1oB" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="247" height="30"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Present Modal"/>
                                        <connections>
                                            <action selector="tappedPresentModal:" destination="Myb-Mj-8hq" eventType="touchUpInside" id="RU2-cz-xbw"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HcN-jC-tDY">
                                        <rect key="frame" x="0.0" y="0.0" width="247" height="30"/>
                                        <state key="normal" title="Go straight to second tab"/>
                                        <connections>
                                            <action selector="tappedButton:" destination="TVD-ia-7KC" eventType="touchUpInside" id="X11-4u-enW"/>
...
